--- a/mysite/mjpeg/templates/cam.html
+++ b/mysite/mjpeg/templates/cam.html
@@ -15,5 +15,6 @@
     <img id="image" />
     {% elif mode == "stream" %}
         <img id="image" src="{% url 'stream' %}"/>
+    {% endif %}
 </body>
 </html>
